Added research paper directoty. Minor code mods.

--- a/thesis/doc/AFIT LaTeX/usethesis.tex
+++ b/thesis/doc/AFIT LaTeX/usethesis.tex
@@ -498,8 +498,14 @@
 	
 	It is instructive to contrast equations 2.1 and 2.2. Both describe the same value, but the importance of the width and height of the traversed barrier in the two equations is considerably different. For systems in which quantum tunneling is possible, the probability of penetrating a barrier of height \begin{math} \Delta V \end{math} is increased by a factor of approximately \begin{math} e^{\Delta V} \end{math}, for large values of \begin{math} \Delta V \end{math}. This relationship is depicted graphically in Fig. 2 which shows the probability of barrier traversal for a system which allows quantum fluctuations, divided by the same probability for a system which only considers thermal fluctuations. Therefore, physical models which considers quantum effects are much more likely predict penetration of tall, thin energy barriers than those which only include classical thermal effects.
 	
+	[In both the simulated thermal and quantum annealing algorithms the Metropolis acceptance criterion is utilized, which is given by \begin{equation}
+	\mathcal{P}_t = e^{-\frac{w \sqrt{\Delta V}}{ \Gamma}} 
+	\end{equation}[goto page 78 in SA eq 5.1] 
+	
 	
 	[Graphic Stub: QSA/SA advantage curve.] 
+	
+	[Graphic Stub: arbitrary 2-parameter error space performance graph]
 	
 	
 	\section{Traversing the Error Manifold}
