--- a/pami/QuantumSynapticAnnealing.tex
+++ b/pami/QuantumSynapticAnnealing.tex
@@ -52,6 +52,9 @@ simulated quantum annealing, neural networks. stochastic gradient descent.
 
 
 .. the most common method of weight selection is back-propagation. Back propagation is a [direct] gradient descent method, which traverses the error surface along its maximum gradient path. The algorithm converges once a minimum located, because there is no longer a negative gradient for the algorithm to follow. While this method can be very successful, it often suffers from premature convergence. That is, the algorithm finds a local, rather than global, error surface minima.
+
+... In this paper, we present an explanation for the utility of FSA in terms of quantum annealing.
+... We show that quantum annealin is effective as a weight selection mechanism for feed-forward neural networks.
  
 \section{Literature Review}
 \label{scn:lit_review}
@@ -62,10 +65,15 @@ Though simulated annealing is effective at finding synaptic weight configuration
 
 
 Simulated annealing is a stochastic optimization algorithm which can be used to find the global minimum of a cost function mapped from the configurations of a combinatorial optimization problem. The concept of simulated annealing was introduced in by Kirkpatrick et. al. in \cite{kirkpatrick1983} as an application of the methods of statistical mechanics to the problem of discrete combinatorial optimization. Specifically, simulated annealing is an extension of the Metropolis-Hastings \cite{metropolis1953} algorithm which can be used to estimate the ground energy state of a many-body systems at thermal equilibrium. Kirkpatrick et. al. applied the Metropolis-Hastings algorithm sequentially, with decreasing temperature values in order to approximate a solid slowly cooling to low temperatures. Later work by Goffe \cite{goffe1994globaloptimization}, Corana et al. \cite{corana1987minimizingmultimodal}, and Lecchini-Visintini et. al. \cite{lecchinivisintini2007sacontinuousgaruntees} extended simulated annealing to the continuous domain. 
+
 When considering only the influence of classical thermal fluctuations in particle energy levels, the probability of a particle traversing a barrier of height \begin{math} \Delta V \end{math} at a temperature \begin{math} T \end{math} is on the order of: \begin{equation} \label{eq:thermal_transistion_prob}
 \mathcal{P}_t = e^{-\frac{\Delta V}{T}}.
 \end{equation}
-This probability forms the basis for the Metropolis acceptance criterion
+This probability forms the basis for the Metropolis acceptance criterion which is given by: \begin{equation} \label{eq:metropolis_acceptance}
+\mathcal{P}_t = e^{-\frac{\Delta V}{T}}.
+\end{equation}
+
+... In \cite{} Szu and Hartley introduced the method of fast simulated annealing (FSA), which incorporates occasional, long jumps through the configurtation space. This provision allows for the possiblity of escaping local minima, and reduces the total computational effort required to reach a global minimum. Later work by Tsallis and Stariolo \cite{}, generalized both CSA and FSA into a single framework: generalized simulated annealing (GSA).
 
 \subsection{Paper Organization}
 \label{scn:paper_organization}
@@ -74,59 +82,87 @@ Section \ref{scn:problem_formulation} contains a discussion of the quantum-inspi
 \section{Problem Formulation and Overview}
 \label{scn:problem_formulation}
 
-In this paper we present a methodology for feed-forward neural network weight selection which employs a quantum-inspired variant of simulated annealing. In the following sections CSA and QSA are introduced and compared. CSA and QSA will then be applied to the pro
+In this paper we present a methodology for feed-forward neural network weight selection which employs a quantum-annealing-inspired variant of simulated annealing. In the following sections CSA and simulated simulated annealing (QSA) are introduced and compared. 
 
-As discussed in Section~\ref{scn:lit_review}, simulated annealing often converges to a local, rather than global minimum. One way to solve this problem is to create a mechanism by which the system can tunnel out of local minima to nearby, lower-cost configurations. This is analogous to the quantum mechanical phenomenon of tunneling.A particle with energy \begin{math} E \end{math} incident upon a potential energy barrier of height \begin{math} \Delta V > E  \end{math} has a non-zero probability of being found in, or past, the barrier. Classically, this behavior is forbidden. The probability of tunneling, \begin{math} \mathcal{P}_t \end{math}, through a step barrier of height \begin{math} \Delta V  \end{math} is described by: 
+As discussed in Section~\ref{scn:lit_review}, simulated annealing converges to a global, rather than local, minimum only if it is given sufficient time to converge. The amound of time required is problem dependent, and is often unacceptably long. One way to solve this problem is to create a mechanism by which the system can tunnel out of local minima to nearby, lower-cost configurations, thus reducing the amount of time needed to garuntee convergence to the global minimum. This is analogous to the quantum mechanical phenomenon of tunneling. In a quantum tunneling event a particle with energy \begin{math} E \end{math} incident upon a potential energy barrier of height \begin{math} \Delta V > E  \end{math} has a non-zero probability of being found in, or past, the barrier. Classically, this behavior is forbidden. The probability of tunneling, \begin{math} \mathcal{P}_t \end{math}, through a step barrier of height \begin{math} \Delta V  \end{math} is described by: 
 \begin{equation} \label{eq:quantum_transition_prob}
 \mathcal{P}_t = e^{-\frac{w \sqrt{\Delta V}}{ \Gamma}} 
-\end{equation} where \begin{math} \Gamma \end{math} is the tunneling field strength \cite{mukherjee2015multivariatesearchqa}. Figure \ref{fig:quantum_tunneling} depicts a one-dimensional example of quantum tunneling.
+\end{equation}
 
-It is instructive to contrast Eq.~\ref{eq:thermal_transistion_prob} and Eq.~\ref{eq:quantum_transition_prob}. Both describe the same value, but the importance of the width and height of the traversed barrier in the two equations is considerably different. For systems in which quantum tunneling is possible, the probability of penetrating a barrier of height $\Delta V$ is increased by a factor of approximately $e^{\Delta V}$, for large values of $\Delta V$. This relationship is depicted graphically in Fig.~\ref{fig:quantum_advantage} which shows the probability of barrier traversal for a system which allows quantum fluctuations, divided by the same probability for a system which only considers thermal fluctuations. Therefore, physical models which consider quantum effects are much more likely predict penetration of tall, thin energy barriers than those which only include classical thermal effects.
+\noindent where \begin{math} \Gamma \end{math} is the tunneling field strength \cite{mukherjee2015multivariatesearchqa}. Figure \ref{fig:quantum_tunneling} depicts a one-dimensional example of quantum tunneling.
+
+It is instructive to contrast Eq.~\ref{eq:thermal_transistion_prob} and Eq.~\ref{eq:quantum_transition_prob}. Both describe the same value, but the importance of the width and height of the traversed barrier in the two equations is considerably different. For systems in which quantum tunneling is possible, the probability of penetrating a barrier of height $\Delta V$ is increased by a factor of approximately $e^{\Delta V}$, for large values of $\Delta V$. This relationship is depicted graphically in Fig.~\ref{fig:quantum_advantage} which shows the probability of barrier traversal for a system which allows quantum fluctuations, divided by the same probability for a system which only considers thermal fluctuations. Therefore, physical models which consider quantum effects are more likely predict penetration of tall, thin energy barriers than those which only include classical thermal effects.
 
 
 \subsection{Classical and Quantum Simulated Annealing}
 \label{scn:classical_quantum_simulated_annealing}
 
-The formulation of QSA described in this paper arises from the construction of a neighborhood function which approximates the transition probabilities of a quantum system traversing a potential energy surface (PES). \footnote{This concept is nearly mathematically identical to the fast simulated annealing model described in \cite{}. However, the QSA algorithm presented in this paper was arrived at independently, though an attempt to incorporate quantum mechanical phenomena into neural network weight selection.}
+The formulation of QSA described in this paper arises from the construction of a neighborhood function which approximates the transition probabilities of a quantum system traversing a potential energy surface (PES). This concept is nearly mathematically identical to the fast simulated annealing model described in \cite{szu1987fastsimulatedannealing}. However, the QSA algorithm presented in this paper was arrived at independently, though an attempt to incorporate quantum mechanical phenomena into neural network weight selection.
 
 
 
 \subsection{Annealing Synaptic Weights}
 \label{scn:weight_selection}
 
-In order to apply the techniques of QSA and CSA, we most first formulate the problem of feed-forward neural network synaptic weight selection as a combinatorial optimization problem. Each synaptic weight in a feed-forward neural network may be encoded as a real-valued element in a 3-dimensional relation matrix, denoted as $\mathit{W}_{ijk}$. In this encoding scheme, for a given [layer] of the matrix, the row and column indexes indicate the pre-synaptic and post-synaptic neurons, respectively. The absence of a synaptic connection is indicated by a $0$. A nonexistent synapse can be caused by the absence of either the presynaptic or post-synaptic neuron, or by the absence of a connection between the neurons. This weight encoding scheme is depicted graphically in Fig.~\ref{fig:nettomatmapping}. The weight matrix, $\boldsymbol{\mathcal{W}}$, therefore encodes a configuration in the solution space of the problem, which corresponds to some cost value $\mathcal{C}(\boldsymbol{\mathcal{W}})$. We may now attempt to minimize $\mathcal{C}(\boldsymbol{\mathcal{W}})$ by perturbing $\boldsymbol{\mathcal{W}}$. With this framework in place, we can apply the techniques of CSA and QSA to the problem of weight selection.
+In order to apply the techniques of QSA and CSA, we must first formulate the problem of feed-forward neural network synaptic weight selection as a combinatorial optimization problem. Each synaptic weight in a feed-forward neural network may be encoded as a real-valued element in a 3-dimensional relation matrix, denoted as $\mathit{W}_{ijk}$. In this encoding scheme, for a given layer, $k$, of the matrix the row and column indexes indicate the pre-synaptic and post-synaptic neurons, respectively. The absence of a synaptic connection is indicated by a value of $0$ in the matrix element cooresponding to that synaptic connection. A nonexistent synapse can be caused by the absence of either the presynaptic or post-synaptic neuron, or by the absence of a connection between the neurons. This weight encoding scheme is depicted graphically in Fig.~\ref{fig:nettomatmapping}. The weight matrix, $\boldsymbol{\mathcal{W}}$, therefore encodes a configuration in the solution space of the problem, which in turn corresponds to some cost value $\mathcal{C}(\boldsymbol{\mathcal{W}})$. We may now attempt to minimize $\mathcal{C}(\boldsymbol{\mathcal{W}})$ by perturbing $\boldsymbol{\mathcal{W}}$. With this framework in place, we can apply the techniques of CSA and QSA to the problem of weight selection.
 
 
 \subsection{Neighborhood Functions}
-\label{scn:neighborhood_methods}
+\label{scn:neighborhood_fuctions}
 
-
-All variations of simulated annealing require the specification of a neighborhood function, which determines the way in which new states may be generated from the current state. 
-Let us define a generic neighborhood function, $\mathcal{N}$, which operates on $\boldsymbol{\mathcal{W}}$, thereby changing its value. In the following section we detail several possible realizations of $\mathcal{N}$, some of which constitute an approximation to system performing quantum tunneling.
+All variations of simulated annealing require the specification of a neighborhood function, which determines the way in which new states may be generated from the current state. Let us define a generic neighborhood function, $\mathcal{N}$, which operates on $\boldsymbol{\mathcal{W}}$, thereby changing its value. In the following section we detail several possible realizations of $\mathcal{N}$, some of which constitute an approximation to system performing quantum tunneling under the influence of an annealable artificial temperature.
 
 
 \subsubsection{Classical Neighborhood Functions}
 \label{scn:classical_neighborhood}
 
-We define \begin{math}\mathcal{N}_{c}\end{math} to be the classical neighborhood function, which is defined as \begin{align}\label{eq:classical_neighborhood}
-	\mathcal{N}_{c} (\boldsymbol{\mathcal{W}}) = \boldsymbol{\mathcal{W}} + \alpha\boldsymbol{\mathcal{R}_n} 
+We define \begin{math}\mathcal{N}_{c}\end{math} to be the classical neighborhood function, which is defined as \begin{align}\label{eq:classical_anisotropic_neighborhood}
+	\mathcal{N}_{c} (\boldsymbol{\mathcal{W}}) = \boldsymbol{\mathcal{W}} + \alpha\boldsymbol{\mathcal{A}} 
 \end{align}
-\noindent where $\boldsymbol{\mathcal{R}_n}$ is a random matrix with dimensionality equal to that of $\boldsymbol{\mathcal{W}}$ which has been normalized such that the elements of the matrix sum to $1$, and $\alpha$ is the learning rate. This neighborhood function will produce a weight matrix, $\boldsymbol{\mathcal{W}'}$, which will have an $L^2$ distance of exactly $\alpha$  from $\boldsymbol{\mathcal{W}}$ in the weight space.
+\noindent where $\alpha$ is the learning rate and $\boldsymbol{\mathcal{A}}$ is a matrix with dimensionality equal to that of $\boldsymbol{\mathcal{W}}$. Each element of $\boldsymbol{\mathcal{A}}$ is generated from a distibution over the range $[-1,1]$.  $\boldsymbol{\mathcal{A}}$ is restricted such that for each element of $\boldsymbol{\mathcal{W}}$ that is zero the cooresponding element in $\boldsymbol{\mathcal{A}}$ is zero, and that $\boldsymbol{\mathcal{A}}$ must be normalized such that the magnitude of the matrix elements sum to $1$. These restrictions ensure two useful properties of the classical neighborhood function, that: 
+
+\begin{enumerate}
+	\item $\mathcal{N}_{c} (\boldsymbol{\mathcal{W}})$ will produce a weight matrix, $\boldsymbol{\mathcal{W}'}$, which will have an $L^2$ distance of exactly $\alpha$ from the original matrix, $\boldsymbol{\mathcal{W}}$, in the weight space.
+	\item This traversal distance will be distributed anisotropically over the weights, with the anisotropicity determined by the distribution used to genererate $\boldsymbol{\mathcal{A}}$. (See Sec.~\ref{scn:anisotropicity} for more information.)
+\end{enumerate}
+These properties are useful in that they allow for strict control over the systems traversal of the cost surface.
+
+%An alternative, isotropic classical neightborhood function is given by  \begin{align}\label{eq:classical_isotropic_neighborhood}\mathcal{N}_{c,I} (\boldsymbol{\mathcal{W}}) = \boldsymbol{\mathcal{W}} + \alpha\boldsymbol{\mathcal{R}_n} \boldsymbol{1} \end{align}
 
 \subsubsection{Quantum Neighborhood Function}
 \label{scn:quantum_neighborhood}
 
-... Consider the hypothetical cost surface depicted in Fig.~\ref{fig:1dtunneling}. 
+The classical neighborhood function present in Sec.~\ref{scn:classical_neighborhood} is one of many which could be employed in CSA. In order to incorporate quantum tunneling into this model, we must have some mechanism which allows the neighborhood function to generate neighbor states which are "across" a cost surface barrier. Since it is impossible to know the cost funciton value of a configuration which has not yet been evaluated, we must construct a neighborhood function which is able to jump to these configurations. This mechanism is often called a trial jump. We define our quantum neightborhood function to be
+\begin{align}\label{eq:quantum_anisotropic_neighborhood}
+\mathcal{N}_{q} (\boldsymbol{\mathcal{W}}) = \boldsymbol{\mathcal{W}} + \alpha G_{\Gamma}(X) \boldsymbol{\mathcal{A}} 
+\end{align}
+\noindent where $\alpha$ and $\boldsymbol{\mathcal{A}}$ are defined as they are in Eq.~\ref{eq:classical_anisotropic_neighborhood}, $X$ is a uniform random variable over the range $[0,1]$, and $G_{\Gamma}(X)$ is a parameterized generation function used to produce a value from the visiting distribution. As in \cite{tsallis1996generalizedsimulatedannealing}, the visiting distribution is defined as the probability distribution function of the trial jump distance. 
+
+The visiting distribution used in this paper for quantum neighborhood functions is the exponential distibution, for which the generation function is given by
+\begin{align}\label{eq:exp_generation_fcn}
+G_{\Gamma}(X) =  \frac{-\ln(X)}{\gamma}
+\end{align}
+\noindent where $\gamma$, the scale parameter for the distribution, is defined as $(1-\Gamma)$. The exponential distribution was selected for this effort so that as close an analogy as possible with quantum mechanical reality could be maintained. As indicated by  Eq.~\ref{eq:quantum_transition_prob} the probability of making a transition through an potential energy barrier decreases exponentially with the width of the barrier; this is analogous to the trial jump distance in the quantum neighborhood function.
+
+The introduced parameter $\Gamma$ denotes the strength of the tunneling field as in \cite{mukherjee2015multivariatesearchqa}, and thus controls the likelihood of a long trial jump. $\Gamma$ is supported on $[0,1)$. A large value of $\Gamma$ corresponds to frequent, long range quantum trial jumps. It is the stochastic control parameter $\Gamma$ value that connects the quantum neightborhood function to qauntum annealing. Much like FSA \cite{szu1987fastsimulatedannealing}, this provides mostly local search with occasoinal global-scale searches. Unlike FSA and GSA, QSA includes an annealable stochastic control parameter specfically to control the behavior of the frequency of global serach instances.
 
 
-\subsubsection{Anisotropic Quantum Neighborhood Function}
-\label{scn:anisotropic_quantum_neighborhood}
-In the course of developing this framework, it was noted that it is sometimes advantageous to move along an error surface in exactly one dimension, as show in Fig.~\ref{fig:anisotropic} This corresponds to modifying a single synaptic weight a single epoch. Though it is possible that this could occur by chance, the likelihood of a single-weight modification is inversely proportional to the number of weights in the network. In physical science a force acting preferentially in a subset of the total dimensionality of the degrees of freedom in which it could act is referred to as an anisotropy. This concept has been extended to the weight selection scheme presented in this paper in the form of a value, $a$, specifying the anisotropicity of a weight matrix perturbation. This value serves as a nonlinear transform on the perturbation matrix, thus concentrating the perturbation in a subset of the available degrees of freedom. Given as 
+
+... Consider the hypothetical one-dimensional cost surface depicted in Fig.~\ref{fig:1dtunneling}. 
+
+
+\subsubsection{Anisotropicity}
+\label{scn:anisotropicity}
+In the course of developing this framework, it was noted that it is sometimes advantageous to move along an error surface in exactly one dimension, as show in Fig.~\ref{fig:anisotropic}. This corresponds to modifying a single synaptic weight in a training epoch. Though it is possible that this could occur by chance, the likelihood of a single-weight modification is inversely proportional to the number of weights in the network. In physical science a force acting preferentially in a subset of the total dimensionality of the degrees of freedom in which it could act is referred to as an anisotropy. This concept has been extended to the weight selection scheme presented in this paper in the form of a value, $a$, specifying the anisotropicity of a weight matrix perturbation. This value serves as a nonlinear transform on the perturbation matrix, thus concentrating the perturbation in a subset of the available degrees of freedom. Given as 
 
 By inspection, when $a$ is $0$, the perturbation will be unchanged and will be distributed evenly across all degrees of freedom, on average. Conversely, $a$ is $1$, all the perturbation will occur in a single dimension, thus changing only one synaptic weight.
 
 \subsection{Cost Functions}
 \label{scn:cost_functions}
+
+
+\subsection{Annealing Schedules}
+\label{scn:annealing_schedules}
 
 \section{Implementation Details}
 \label{scn:implementation_details}
@@ -136,6 +172,8 @@ By inspection, when $a$ is $0$, the perturbation will be unchanged and will be d
 \label{scn:experiments_results}
 
 
+\bibliographystyle{IEEEtran}
+\bibliography{synapticAnnealingBib}
 
 
 
